--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "image-gallery",
+  "homepage": "https://adityarajsingh.github.io/image-gallery",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "gh-pages": "^4.0.0",
     "i": "^0.3.7",
     "npm": "^9.1.2",
     "react": "^18.2.0",
@@ -18,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
